tests/redeclaration.error
ERROR: tests/redeclaration.c:3:9: Redefinition of 'i'
