tests/redeclaration.c
int main(void) {
    int i = 1;
    int i = 2;
    return 0;
}
